[package]
edition = "2018"
name = "ecs"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]

[dependencies]
anymap = "*"
typename = "*"
rand = "*"
cgmath = "0.17.0"
ears = "0.5.1"
#lazy_static = "1.3.0"
notify = "4.0.*"

[dependencies.sdl2]
version = "0.32.1"
features = ["ttf", "image"]
