[package]
edition = "2018"
name = "ecs"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]

[features]
use-sdl = ["sdl2"]
use-sfml = ["sfml"]

[dependencies]
anymap = "0.12.1"
typename = "0.1.1"
cgmath = "0.17.0"
ears = "0.5.1"
#lazy_static = "1.3.0"
notify = "4.0.*"
sfml = { version = "0.14.0", optional = true }
rand = "*"

[dependencies.sdl2]
version = "0.32.1"
features = ["ttf", "image"]
optional = true
