[workspace]

members = [
    "inle_alloc",
    "inle_audio",
    "inle_cfg",
    "inle_common",
    "inle_core",
    "inle_debug",
    "inle_ecs",
    "inle_events",
    "inle_fs",
    "inle_gfx",
    "inle_input",
    "inle_physics",
    "inle_prelude",
    "inle_replay",
    "inle_resources",
    "inle_ui",
]
