[workspace]

members = [
    "inle_alloc",
    "inle_audio",
    "inle_audio_backend",
    "inle_cfg",
    "inle_common",
    "inle_core",
    "inle_debug",
    "inle_diagnostics",
    "inle_ecs",
    "inle_events",
    "inle_fs",
    "inle_gfx",
    "inle_gfx_backend",
    "inle_input",
    "inle_physics",
    "inle_replay",
    "inle_resources",
    "inle_ui",
    "inle_win",
]
