[package]
edition = "2018"
name = "ecs_game"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies.ecs_engine]
features = ["use-sfml"]
path = "../ecs_engine"

[dependencies]
rayon = "1.3"

[dependencies.smallvec]
default-features = false
version = "1.4"

[features]
prof_entities_update = []
prof_scene_tree = []
prof_gameplay = []
prof_game_render = []
prof_all = ["prof_entities_update", "prof_scene_tree", "prof_gameplay", "prof_game_render"]

[dev-dependencies]
float-cmp = "0.5.2"
