[package]
edition = "2018"
name = "ecs_game"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies.ecs_engine]
path = "../ecs_engine"

[dependencies]
rayon = "1.3"
lazy_static = "1.3"

[dependencies.smallvec]
default-features = false
version = "1.4"

[dev-dependencies]
float-cmp = "0.5.2"
