[package]
edition = "2021"
name = "minigame"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
inle_alloc = { path = "../inle/inle_alloc" }
inle_app = { path = "../inle/inle_app" }
inle_audio = { path = "../inle/inle_audio" }
inle_cfg = { path = "../inle/inle_cfg" }
inle_core = { path = "../inle/inle_core" }
inle_common = { path = "../inle/inle_common" }
inle_debug = { path = "../inle/inle_debug" }
inle_diagnostics = { path = "../inle/inle_diagnostics" }
#inle_events = { path = "../inle/inle_events" }
#inle_fs = { path = "../inle/inle_fs" }
inle_gfx = { path = "../inle/inle_gfx" }
inle_input = { path = "../inle/inle_input" }
inle_math = { path = "../inle/inle_math" }
inle_physics = { path = "../inle/inle_physics" }
inle_ui = { path = "../inle/inle_ui" }
inle_win = { path = "../inle/inle_win" }

smallvec = { workspace = true }
