[package]
name = "inle_audio"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
audio-null = []
audio-sfml = ["sfml/audio"]
default = ["audio-sfml"]

[dependencies]

[dependencies.sfml]
version = "0.15.1"
git = "https://github.com/jeremyletang/rust-sfml"
rev = "9199dc4"
optional = true
default-features = false
