[package]
name = "inle_physics"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_math = { path = "../inle_math" }
inle_ecs = { path = "../inle_ecs" }
