[package]
name = "inle_replay"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_cfg = { path = "../inle_cfg" }
inle_common = { path = "../inle_common" }
inle_core = { path = "../inle_core" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_input = { path = "../inle_input" }
inle_serialize = { path = "../inle_serialize" }
