[package]
name = "inle_app"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_alloc = { path = "../inle_alloc" }
inle_cfg = { path = "../inle_cfg" }
inle_core = { path = "../inle_core" }
inle_common = { path = "../inle_common" }
inle_debug = { path = "../inle_debug" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_events = { path = "../inle_events" }
inle_fs = { path = "../inle_fs" }
inle_gfx = { path = "../inle_gfx" }
inle_input = { path = "../inle_input" }
inle_math = { path = "../inle_math" }
inle_physics = { path = "../inle_physics" }
inle_resources = { path = "../inle_resources" }
inle_win = { path = "../inle_win" }
notify = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
inle_test = { path = "../inle_test" }
serial_test = "0.5"
