[package]
name = "inle_audio"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
audio-null = []
audio-sfml = ["sfml/audio"]
default = ["audio-sfml"]

[dependencies]
inle_audio_backend = { path = "../inle_audio_backend" }
inle_resources = { path = "../inle_resources" }

[dependencies.sfml]
version = "0.15.1"
git = "https://github.com/jeremyletang/rust-sfml"
rev = "9199dc4"
optional = true
default-features = false

[dev-dependencies]
inle_test = { path = "../inle_test" }
