[package]
name = "inle_audio"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_audio_backend = { path = "../inle_audio_backend" }
# Only used for error!() macro...consider removing.
inle_common = { path = "../inle_common" }
inle_core = { path = "../inle_core" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_resources = { path = "../inle_resources" }
