[package]
name = "inle_audio_backend"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
audio-null = []
default = ["audio-null"]

[dependencies]
inle_common = { path = "../inle_common" }
