[package]
name = "inle_core"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_diagnostics = { path = "../inle_diagnostics" }
inle_serialize = { path = "../inle_serialize" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "*"
