[package]
name = "inle_diagnostics"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracer = ["rayon", "lazy_static"]
default = ["tracer"]

[dependencies]
rayon = { optional = true, version = "1.3" }
lazy_static = { optional = true, version = "1.3" }
