[package]
name = "inle_diagnostics"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracer = ["rayon"]
default = ["tracer"]

[dependencies]
lazy_static = { version = "1.3" }
rayon = { optional = true, version = "1.3" }
