[package]
name = "inle_gfx"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#gfx-null = []
#gfx-sfml = ["sfml/graphics"]
#default = ["gfx-sfml"]

[dependencies]
inle_alloc = { path = "../inle_alloc" }
inle_cfg = { path = "../inle_cfg" }
inle_core = { path = "../inle_core" }
inle_common = { path = "../inle_common" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_gfx_backend = { path = "../inle_gfx_backend" }
inle_input = { path = "../inle_input" }
inle_math = { path = "../inle_math" }
inle_resources = { path = "../inle_resources" }
inle_win = { path = "../inle_win" }
rayon = "1.3"

[dependencies.smallvec]
default-features = false
version = "1.8"
