[package]
name = "inle_gfx"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#gfx-null = []

[dependencies]
inle_alloc = { path = "../inle_alloc" }
inle_cfg = { path = "../inle_cfg" }
inle_core = { path = "../inle_core" }
inle_common = { path = "../inle_common" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_gfx_backend = { path = "../inle_gfx_backend" }
inle_math = { path = "../inle_math" }
inle_resources = { path = "../inle_resources" }
inle_win = { path = "../inle_win" }
rayon = { workspace = true }
smallvec = { workspace = true }
