[package]
name = "inle_gfx_backend"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gfx-null = []
gfx-sfml = ["sfml/graphics"]
gfx-gl = ["gl"]
default = ["gfx-gl"]
#default = ["gfx-sfml"]

[dependencies]
inle_common = { path = "../inle_common" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_math = { path = "../inle_math" }
inle_win = { path = "../inle_win" }

[dependencies.sfml]
version = "0.15.1"
git = "https://github.com/jeremyletang/rust-sfml"
rev = "9199dc4"
optional = true
default-features = false

[dependencies.gl]
optional = true
version = "0.14"
