[package]
name = "inle_gfx_backend"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gfx-null = []
gfx-gl = ["gl"]
default = ["gfx-gl"]

[dependencies]
inle_alloc = { path = "../inle_alloc" }
inle_common = { path = "../inle_common" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_math = { path = "../inle_math" }
inle_win = { path = "../inle_win" }

[dependencies.gl]
optional = true
version = "0.14"

[dev-dependencies]
inle_test = { path = "../inle_test" }
serial_test = "0.5"
