[package]
name = "inle_input"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
win-glfw = ["glfw"]
default = ["win-glfw"]

[dependencies]
inle_cfg = { path = "../inle_cfg" }
inle_common = { path = "../inle_common" }
inle_core = { path = "../inle_core" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_math = { path = "../inle_math" }
inle_serialize = { path = "../inle_serialize" }
inle_win = { path = "../inle_win" }
smallvec = { workspace = true }

[dependencies.glfw]
version = "0.42"
optional = true
default-features = false
#features = ["glfw-sys"]
