[package]
name = "inle_math"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_diagnostics = { path = "../inle_diagnostics" }

[dev-dependencies]
inle_test = { path = "../inle_test" }
