[package]
name = "inle_physics"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_alloc = { path = "../inle_alloc" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_ecs = { path = "../inle_ecs" }
inle_events = { path = "../inle_events" }
inle_math = { path = "../inle_math" }
rayon = { workspace = true }
smallvec = { workspace = true }
