[package]
name = "inle_resources"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
load-png = ["png"]
default = ["load-png"]

[dependencies]
inle_common = { path = "../inle_common" }
inle_core = { path = "../inle_core" }
inle_diagnostics = { path = "../inle_diagnostics" }
inle_gfx_backend = { path = "../inle_gfx_backend" }
inle_audio_backend = { path = "../inle_audio_backend" }

[dependencies.png]
optional = true
version = "0.16"
