[package]
name = "inle_test"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_core = { path = "../inle_core" }
inle_resources = { path = "../inle_resources" }
float-cmp = "0.8"
