[package]
name = "inle_test"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gfx-gl = ["gl", "glfw"]
default = ["gfx-gl"]

[dependencies]
inle_core = { path = "../inle_core" }
inle_resources = { path = "../inle_resources" }
float-cmp = "0.8"

[dependencies.gl]
optional = true
version = "0.14"

[dependencies.glfw]
version = "0.39"
optional = true
default-features = false
