[package]
name = "inle_ui"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inle_common = { path = "../inle_common" }
inle_core = { path = "../inle_core" }
inle_input = { path = "../inle_input" }
inle_math = { path = "../inle_math" }
inle_gfx = { path = "../inle_gfx" }
inle_win = { path = "../inle_win" }
