[package]
name = "inle_win"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
win-glfw = ["glfw"]
win-sfml = ["sfml/window"]
win-winit = ["winit"]
gfx-sfml = ["sfml/graphics"]
gfx-gl = []
#default = ["win-sfml", "gfx-sfml"]
default= ["win-glfw", "gfx-gl"]

[dependencies]
inle_math = { path = "../inle_math" }
inle_diagnostics = { path = "../inle_diagnostics" }

[dependencies.sfml]
version = "0.15.*"
git = "https://github.com/jeremyletang/rust-sfml"
rev = "9199dc4"
optional = true
default-features = false

[dependencies.glfw]
version = "0.42"
optional = true
default-features = false
#features = ["glfw-sys"]

[dependencies.winit]
version = "0.24"
optional = true
default-features = false
features = ["x11"]
