[package]
name = "inle_win"
version = "0.1.0"
authors = ["silverweed <silverweed1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
win-glfw = ["glfw"]
win-winit = ["winit"]
gfx-gl = []
default= ["win-glfw", "gfx-gl"]

[dependencies]
inle_math = { path = "../inle_math" }
inle_diagnostics = { path = "../inle_diagnostics" }

[dependencies.glfw]
version = "0.42"
optional = true
default-features = false
#features = ["glfw-sys"]

[dependencies.winit]
version = "0.24"
optional = true
default-features = false
features = ["x11"]
